@@ -1,6 +1,7 @@
 Current
 -------
 - Fixed #25532 - Documentation error
+- Added #26047 - per-request caching of authentication in OData
 
 20160129
 --------
